--- a/django_blog/templates/index.html
+++ b/django_blog/templates/index.html
@@ -73,21 +73,26 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-        <div class="post-preview">
-          <a href="post.html">
-            <h2 class="post-title">
-              Man must explore, and this is exploration at its greatest
-            </h2>
-            <h3 class="post-subtitle">
-              Problems look mighty small from 150 miles up
-            </h3>
-          </a>
-          <p class="post-meta">Posted by
-            <a href="#">Start Bootstrap</a>
-            on September 24, 2019</p>
-        </div>
-        <hr>
-
+        {% if posts %}
+          {% for post in posts %}
+            <div class="post-preview">
+              <a href="post.html">
+                <h2 class="post-title">
+                  {{ post.title }}
+                </h2>
+                <h3 class="post-subtitle">
+                  {{ post.description }}
+                </h3>
+              </a>
+              <p class="post-meta">Escrito por
+                <strong>{{ post.author }}</strong>
+                {{ post.creation_date }}</p>
+            </div>
+            <hr>
+          {% endfor %}
+        {% else %}
+          <h2>No existen posts registrados! D:</h2>
+        {% endif %}
         <!-- Pager -->
         <div class="clearfix">
           <a class="btn btn-primary float-right" href="#">Older Posts &rarr;</a>
