Ya se puede ver cada post

--- a/django_blog/templates/index.html
+++ b/django_blog/templates/index.html
@@ -19,7 +19,7 @@
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
   <!-- Custom styles for this template -->
-  <link href="{% static 'css/clean-blog.min.css' %}" rel="stylesheet">
+  <link href="{% static 'css/clean-blog.css' %}" rel="stylesheet">
 
 </head>
 
@@ -70,13 +70,15 @@
   </header>
 
   <!-- Main Content -->
+
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
+        {% block content %}
         {% if posts %}
           {% for post in posts %}
             <div class="post-preview">
-              <a href="post.html">
+              <a href="{% url 'blog:details_post' post.slug %}">
                 <h2 class="post-title">
                   {{ post.title }}
                 </h2>
@@ -93,15 +95,13 @@
         {% else %}
           <h2>No existen posts registrados! D:</h2>
         {% endif %}
+        {% endblock content %}
         <!-- Pager -->
-        <div class="clearfix">
-          <a class="btn btn-primary float-right" href="#">Older Posts &rarr;</a>
-        </div>
       </div>
     </div>
   </div>
-
   <hr>
+
 
   <!-- Footer -->
   <footer>
