--- a/django_blog/templates/index.html
+++ b/django_blog/templates/index.html
@@ -69,6 +69,24 @@
     </div>
   </header>
 
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 search">
+        <form method="get">
+          <div id="custom-search-input">
+            <div class="input-group col-md-12">
+              <input type="text" class="form-control" placeholder="Buscar..." name="search">
+              <span class="input-group-list">
+                <i class="icon icon-search"></i>
+                <button type="submit" class="boton btn-success" name="button">Buscar</button>
+              </span>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+
   <!-- Main Content -->
 
   <div class="container">
